# okta-agent

./: .bumpversion.cfg  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  MANIFEST.in  README.md  a2a.json  connector_manifest.yml  index.html  mcp_config.json  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  sitemap.xml
concepts/: index.html
configuration/: index.html
deployment/: index.html
docker/: Dockerfile  agent.compose.yml  compose.yml  debug.Dockerfile  mcp.compose.yml
docs/: concepts.md  configuration.md  deployment.md  index.md  installation.md  overview.md  usage.md
installation/: index.html
okta_agent/: __init__.py  __main__.py  agent_server.py  api_client.py  auth.py  kg_ingest.py  main_agent.json  mcp_server.py  okta_input_models.py  okta_response_models.py
okta_agent/api/: __init__.py  api_client_apps.py  api_client_base.py  api_client_groups.py  api_client_policies.py  api_client_system.py  api_client_users.py  credentials.py  filters.py
okta_agent/connectors/: mcp_source_presets.json  (+1 more)
overview/: index.html
prompts/: main_agent.md
scripts/: validate_a2a_agent.py  validate_agent.py  verify_api_integration.py
search/: search_index.json
tests/: conftest.py  test_api_wrapper.py  test_apps_client.py  test_auth.py  test_base_client.py  test_concept_parity.py  test_credentials.py  test_filters.py  test_groups_client.py  test_init_dynamics.py  test_kg_ingest.py  test_okta_mcp_validation.py  test_okta_models.py  test_pagination.py  test_policies_client.py  test_startup.py  test_system_client.py  test_users_client.py
usage/: index.html
(+27 files in other folders)
